feat: updates to wayfinder-core alpha

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -32,8 +32,8 @@
   },
   "dependencies": {
     "@ar.io/sdk": "^3.5.0",
-    "@ar.io/wayfinder-core": "*",
-    "@permaweb/aoconnect": "0.0.69"
-  },
-  "license": "AGPL-3.0-only"
+    "@ar.io/wayfinder-core": "alpha",
+    "@permaweb/aoconnect": "0.0.69",
+    "lucide": "^0.514.0"
+  }
 }
