--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "eslint": "^9.25.1",
     "eslint-plugin-header": "^3.1.1",
     "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.4.5"
   },
@@ -34,8 +33,8 @@
     "url": "git+https://github.com/ar-io/wayfinder.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "AGPL-3.0-only",
+  "author": "Permanent Data Solutions, Inc.",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/ar-io/wayfinder/issues"
   },
