--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -15,8 +15,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "type": "module"
+      "js": ["content.js"]
     }
   ],
   "content_security_policy": {
