--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -23,6 +23,8 @@
   "scripts": {
     "start": "vite preview",
     "build": "vite build --config vite.config.js",
+    "dev": "vite build --watch --config vite.config.js",
+    "watch": "vite build --watch --config vite.config.js",
     "clean": "rimraf dist",
     "test": "echo \"Passing\"",
     "lint:fix": "biome check --write --unsafe",
