--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@dha-team/arbundles": "^1.0.3",
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/context-zone": "^2.0.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.202.0",
     "@opentelemetry/sdk-trace-base": "^2.0.1",
     "@opentelemetry/sdk-trace-node": "^2.0.1",
@@ -47,7 +48,8 @@
     "arweave": "^1.14.0",
     "eventemitter3": "^5.0.1",
     "plimit-lit": "^3.0.1",
-    "rfc4648": "^1.5.4"
+    "rfc4648": "^1.5.4",
+    "zone.js": "^0.15.1"
   },
   "peerDependencies": {
     "@ar.io/sdk": ">=3.12.0"
