--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
   "changelog": "@changesets/cli/changelog",
-  "commit": ["npm run lint:fix", "npm run format:fix", "git add ."],
+  "commit": true,
   "skipCI": true,
   "message": "chore(release): version packages",
   "fixed": [],
