docs(changeset): Fix LocalStorageGatewaysProvider to cache gateway url strings instead of URL objects'

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
-    "test": "echo \"Passing\"",
+    "test": "tsx --test 'src/**/*.test.ts'",
     "lint:fix": "biome check --write --unsafe",
     "lint:check": "biome check --unsafe",
     "format:fix": "biome format --write",
