chore(git): update release action

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,7 @@ jobs:
     uses: ./.github/workflows/pr-check.yml
 
   release:
+    needs: monorepo
     name: Release
     runs-on: ubuntu-latest
     permissions:
