chore: cleanup for release

--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "AR.IO WayFinder",
   "version": "0.1.0",
-  "description": "WayFinder (Alpha) streamlines access to the Permaweb through the AR.IO Network and Arweave Name System.",
+  "description": "Seamlessly browse ar:// URLs through the AR.IO gateway network with automatic routing, performance tracking, and ArNS support.",
   "permissions": ["storage", "webNavigation", "webRequest", "scripting"],
   "host_permissions": ["<all_urls>"],
   "background": {
