chore(extension): update to use ts for all files, add extenion build to git release action

--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -6,7 +6,7 @@
   "permissions": ["storage", "webNavigation", "webRequest", "scripting"],
   "host_permissions": ["<all_urls>"],
   "background": {
-    "service_worker": "background.js",
+    "service_worker": "background.ts",
     "type": "module"
   },
   "action": {
@@ -15,7 +15,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.ts"]
     }
   ],
   "content_security_policy": {
