--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -7,7 +7,9 @@
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "lib": ["dom", "esnext"],
+    "types": ["chrome"],
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules"]
