--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@ar.io/sdk": "^3.13.0",
-    "@ar.io/wayfinder-core": "^1.0.0",
+    "@ar.io/wayfinder-core": "^1.0.1-alpha.0",
     "@permaweb/aoconnect": "0.0.69"
   }
 }
