--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "AR.IO WayFinder",
-  "version": "0.1.0",
-  "description": "Seamlessly browse ar:// URLs through the AR.IO gateway network with automatic routing, performance tracking, and ArNS support.",
+  "name": "AR.IO Wayfinder",
+  "version": "1.0.0",
+  "description": "Fast, verifiable, decentralized access to ar:// links via AR.IO’s Permanent Cloud.",
   "permissions": ["storage", "webNavigation", "webRequest", "scripting"],
   "host_permissions": ["<all_urls>"],
   "background": {
