--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ar.io/wayfinder-extension",
   "version": "1.0.0-alpha.2",
-  "description": "WayFinder Chrome extension that intelligently routes users to optimal AR.IO gateways",
+  "description": "Fast, verifiable, decentralized access to ar:// links via AR.IO’s Permanent Cloud.",
   "private": true,
   "type": "module",
   "license": "Apache-2.0",
