chore(core): update tsconfig.json

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -13,16 +13,17 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": false,
-    "outDir": "dist",
+    "outDir": "./dist",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
+    "rootDir": "./src",
     "paths": {
       "@ar.io/wayfinder/*": ["./src/*"]
     }
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.test.ts", "dist"]
 }
