chore(git): push commit after existing preset

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -55,6 +55,7 @@ jobs:
               npx changeset pre exit
               git add .
               git commit -m "chore: exit pre-release mode" || echo "No changes to commit"
+              git push
             else
               echo "Not in pre-release mode"
             fi
