chore(git): add back push steps in release.yaml

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -53,6 +53,9 @@ jobs:
             if [ -f ".changeset/pre.json" ]; then
               echo "Exiting pre-release mode"
               npx changeset pre exit
+              git add .
+              git commit -m "chore: exit pre-release mode" || echo "No changes to commit"
+              git push
             else
               echo "Not in pre-release mode"
             fi
