--- a/packages/wayfinder-extension/package.json
+++ b/packages/wayfinder-extension/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@ar.io/sdk": "^3.13.0",
     "@ar.io/wayfinder-core": "^1.0.2",
-    "@permaweb/aoconnect": "0.0.69"
+    "@permaweb/aoconnect": "0.0.69",
+    "p-debounce": "^4.0.0"
   }
 }
