--- a/packages/wayfinder-extension/package.json
+++ b/packages/wayfinder-extension/package.json
@@ -36,6 +36,7 @@
     "@ar.io/sdk": "^3.13.0",
     "@ar.io/wayfinder-core": "^1.0.3",
     "@permaweb/aoconnect": "0.0.69",
+    "lru-cache": "^11.1.0",
     "p-debounce": "^4.0.0"
   }
 }
