--- a/packages/wayfinder-react/package.json
+++ b/packages/wayfinder-react/package.json
@@ -25,10 +25,10 @@
     "update-version": "node scripts/update-version.mjs",
     "clean": "rimraf dist",
     "test": "tsx --test 'src/**/*.test.ts'",
-    "lint:fix": "biome check --write --unsafe",
-    "lint:check": "biome check --unsafe",
-    "format:fix": "biome format --write",
-    "format:check": "biome format"
+    "lint:fix": "biome check --write --unsafe --config-path=../../biome.json",
+    "lint:check": "biome check --unsafe --config-path=../../biome.json",
+    "format:fix": "biome format --write --config-path=../../biome.json",
+    "format:check": "biome format --config-path=../../biome.json"
   },
   "dependencies": {
     "@ar.io/wayfinder-core": "1.0.3",
