--- a/packages/wayfinder-extension/package.json
+++ b/packages/wayfinder-extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ar.io/wayfinder-extension",
-  "version": "1.0.3-alpha.0",
+  "version": "1.0.3",
   "description": "Fast, verifiable, decentralized access to ar:// links via AR.IO’s Permanent Cloud.",
   "private": true,
   "type": "module",
