--- a/packages/wayfinder-core/package.json
+++ b/packages/wayfinder-core/package.json
@@ -20,7 +20,9 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "default": "./dist/index.js"
     }
   },
   "repository": {
