--- a/.github/workflows/chrome.yml
+++ b/.github/workflows/chrome.yml
@@ -29,20 +29,20 @@ jobs:
           cd packages/wayfinder-extension
           ./build_artifact.sh
 
+      - name: Publish to Chrome Web Store
+        run: |
+          npx chrome-webstore-upload \
+            --source ./packages/wayfinder-extension/wayfinder-extension-v${{ steps.extension.outputs.VERSION }}.zip \
+            --client-id ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }} \
+            --client-secret ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }} \
+            --refresh-token ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
+
       - name: Update GitHub Releases
         run: |
           gh release upload \
             @ar.io/wayfinder-extension@${{ steps.extension.outputs.VERSION }} \
-            packages/wayfinder-extension/wayfinder-extension-v${{ steps.extension.outputs.VERSION }}.zip \
+            ./packages/wayfinder-extension/wayfinder-extension-v${{ steps.extension.outputs.VERSION }}.zip \
             --clobber
-
-      - name: Publish to Chrome Web Store
-        run: |
-          chrome-webstore-upload \
-            --source packages/wayfinder-extension/wayfinder-extension-v${{ steps.extension.outputs.VERSION }}.zip \
-            --client-id ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }} \
-            --client-secret ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }} \
-            --refresh-token ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
 
       - name: Notify Slack
         uses: rtCamp/action-slack-notify@v2
