--- a/packages/wayfinder-core/package.json
+++ b/packages/wayfinder-core/package.json
@@ -7,12 +7,7 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "license": "Apache-2.0",
-  "keywords": [
-    "ar-io",
-    "arweave",
-    "wayfinder",
-    "ar://"
-  ],
+  "keywords": ["ar-io", "arweave", "wayfinder", "ar://"],
   "author": {
     "name": "Permanent Data Solutions Inc",
     "email": "info@ar.io",
@@ -21,12 +16,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": [
-    "dist",
-    "package.json",
-    "README.md",
-    "LICENSE"
-  ],
+  "files": ["dist", "package.json", "README.md", "LICENSE"],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
