--- a/packages/wayfinder-react/package.json
+++ b/packages/wayfinder-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ar.io/wayfinder-react",
-  "version": "1.0.13-alpha.0",
+  "version": "1.0.13",
   "description": "React components for WayFinder",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -10,7 +10,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": ["dist", "package.json", "README.md", "LICENSE"],
+  "files": [
+    "dist",
+    "package.json",
+    "README.md",
+    "LICENSE"
+  ],
   "author": {
     "name": "Permanent Data Solutions Inc",
     "email": "info@ar.io",
@@ -31,7 +36,7 @@
     "format:check": "biome format --config-path=../../biome.json"
   },
   "dependencies": {
-    "@ar.io/wayfinder-core": "1.3.0-alpha.0",
+    "@ar.io/wayfinder-core": "1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
