--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -60,6 +60,13 @@ jobs:
           
       - name: Build all packages
         run: npm run build --workspaces
+
+      - name: Create the updated version of the packages
+        uses: changesets/action@v1
+        with:
+          version: npx changeset version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Create Release Pull Request or Publish to npm
         id: changesets
