--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "build": "npm run build --workspaces",
     "version": "npm run build && npx changeset version",
     "publish": "npm run build && npx changeset publish",
+    "publish:alpha": "npx changeset pre enter alpha && npm run build && npm run publish",
+    "publish:main": "npx changeset pre exit && npm run build && npm run publish",
     "lint:fix": "biome check --write --unsafe && eslint --fix packages/*/src",
     "lint:check": "biome check --unsafe && eslint packages/*/src",
     "format:fix": "biome format --write",
