--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,6 +47,7 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: npm run publish:${{ github.ref_name }}
+          version: npm run version
           commit: "chore(release): version packages"
           title: "chore(release): version packages"
         env:
