chore(git): remove --frozen-lockfile in git, replace with npm ci

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -2,69 +2,69 @@ name: Core Library
 
 on:
   push:
-    branches: [ main, alpha ]
+    branches: [main, alpha]
     paths:
-      - 'packages/wayfinder-core/**'
-      - '.github/workflows/core.yml'
-      - 'package.json'
+      - "packages/wayfinder-core/**"
+      - ".github/workflows/core.yml"
+      - "package.json"
   pull_request:
-    branches: [ main, alpha ]
+    branches: [main, alpha]
     paths:
-      - 'packages/wayfinder-core/**'
-      - '.github/workflows/core.yml'
-      - 'package.json'
+      - "packages/wayfinder-core/**"
+      - ".github/workflows/core.yml"
+      - "package.json"
 
 jobs:
   lint:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version-file: '.nvmrc'
-        cache: 'npm'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+          cache: "npm"
 
-    - name: Install dependencies
-      run: npm install --frozen-lockfile
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Lint
-      run: npm run lint:check -w @ar.io/wayfinder-core
+      - name: Lint
+        run: npm run lint:check -w @ar.io/wayfinder-core
 
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version-file: '.nvmrc'
-        cache: 'npm'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+          cache: "npm"
 
-    - name: Install dependencies
-      run: npm install --frozen-lockfile
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Test
-      run: npm run test:unit -w @ar.io/wayfinder-core
+      - name: Test
+        run: npm run test:unit -w @ar.io/wayfinder-core
 
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version-file: '.nvmrc'
-        cache: 'npm'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+          cache: "npm"
 
-    - name: Install dependencies
-      run: npm install --frozen-lockfile
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Build core library
-      run: npm run build -w @ar.io/wayfinder-core
+      - name: Build core library
+        run: npm run build -w @ar.io/wayfinder-core
