--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -2,42 +2,41 @@ name: Chrome Extension
 
 on:
   push:
-    branches: [ main, alpha ]
+    branches: [main, alpha]
     paths:
-      - 'packages/wayfinder-extension/**'
-      - 'packages/wayfinder-core/**'
-      - '.github/workflows/extension.yml'
-      - 'package.json'
+      - "packages/wayfinder-extension/**"
+      - "packages/wayfinder-core/**"
+      - ".github/workflows/extension.yml"
+      - "package.json"
   pull_request:
-    branches: [ main, alpha ]
+    branches: [main, alpha]
     paths:
-      - 'packages/wayfinder-extension/**'
-      - 'packages/wayfinder-core/**'
-      - '.github/workflows/extension.yml'
-      - 'package.json'
+      - "packages/wayfinder-extension/**"
+      - "packages/wayfinder-core/**"
+      - ".github/workflows/extension.yml"
+      - "package.json"
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version-file: '.nvmrc'
-        cache: 'npm'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+          cache: "npm"
 
-    - name: Install dependencies
-      run: npm install --frozen-lockfile
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Lint
-      run: npm run lint:check -w @ar.io/wayfinder-extension
-      
-    - name: Build core library first
-      run: npm run build -w @ar.io/wayfinder-core
-      
-    - name: Build extension
-      run: npm run build -w @ar.io/wayfinder-extension
+      - name: Lint
+        run: npm run lint:check -w @ar.io/wayfinder-extension
 
+      - name: Build core library first
+        run: npm run build -w @ar.io/wayfinder-core
+
+      - name: Build extension
+        run: npm run build -w @ar.io/wayfinder-extension
