--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -28,7 +28,7 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Lint
         run: npm run lint:check -w @ar.io/wayfinder-core
@@ -46,7 +46,7 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Test
         run: npm run test:unit -w @ar.io/wayfinder-core
@@ -64,7 +64,7 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Build core library
         run: npm run build -w @ar.io/wayfinder-core
